--- a/redsocks.conf
+++ b/redsocks.conf
@@ -1,31 +1,17 @@
 base {
-	log_debug = off;
-	log_info = on;
-	log = stderr;
-	daemon = off;
-	user = redsocks;
-	group = redsocks;
-	redirector = iptables;
+        log_debug = off;
+        log_info = on;
+        log = "syslog:daemon";
+        daemon = false;
+        user = redsocks;
+        group = redsocks;
+        redirector = iptables;
 }
 
 redsocks {
-	// bind options
-	local_ip = 0.0.0.0;
-	local_port = 3129;
-
-	// parent proxy
-	ip = 127.0.0.1;
-	port = 3128;
-	type = http-relay;
-}
-
-redsocks {
-	// bind options
-	local_ip = 0.0.0.0;
-	local_port = 3130;
-
-	// parent proxy
-	ip = 127.0.0.1;
-	port = 3128;
-	type = http-connect;
+        local_ip = 0.0.0.0;
+        local_port = 3129;
+        ip = "127.0.0.1";
+        port = 3128;
+        type = "http-connect";
 }
