--- a/squid.conf
+++ b/squid.conf
@@ -1,4 +1,12 @@
-acl manager proto cache_object
+http_port 3128 intercept
+
+refresh_pattern ^ftp:           1440    20%     10080
+refresh_pattern ^gopher:        1440    0%      1440
+refresh_pattern -i (/cgi-bin/|\?) 0     0%      0
+refresh_pattern .               0       20%     4320
+
+acl manager url_regex -i ^cache_object:// +i ^https?://[^/]+/squid-internal-mgr/
+
 acl localhost src 127.0.0.1/32 ::1
 acl to_localhost dst 127.0.0.0/8 0.0.0.0/32 ::1
 
@@ -19,15 +27,7 @@ http_access allow manager localhost
 http_access deny manager
 http_access deny !Safe_ports
 http_access deny CONNECT !SSL_ports
-http_access allow localhost
-
-http_port 3128
-
-coredump_dir /var/spool/squid3
-
-refresh_pattern ^ftp:           1440    20%     10080
-refresh_pattern ^gopher:        1440    0%      1440
-refresh_pattern -i (/cgi-bin/|\?) 0     0%      0
-refresh_pattern .               0       20%     4320
+http_access allow all
 
 include /etc/squid3/conf.d/*.conf
+
